--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Practice</title>
+    <!-- google font linking -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
+    <!-- css linking -->
+    <link rel="stylesheet" href="style/porfolio.css">
 </head>
 <body>
-    
+    <!-- emmet code for header: header>nav>h3>span^ul>li*3>a^button (button part needs to check yet) -->
+    <header>
+        <nav>
+            <h3 class="nav-title">Ma<span class="text-yellow">r</span>y</h3>
+            <ul>
+                <li>
+                    <a href="portfolio.html" target="_blank">Portfolio</a>
+                </li>
+                <li>
+                    <a href="blog.html" target="_blank">Blog</a>
+                </li>
+                <li>
+                    <button class="button-primary">Hire Me</button>
+                </li>  
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
