--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- emmet code for header: header>nav>h3>span^ul>li*3>a^button (button part needs to check yet) -->
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="text-yellow">r</span>y</h3>
             <ul>
@@ -28,6 +28,17 @@
                 </li>  
             </ul>
         </nav>
+        <!--.banner for div with banner class-->
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greet">Hi,I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p banner-description>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="button-primary">Download CV</button>
+                <button class="button-primary">Contact</button>
+            </div>
+            <img class="banner-image" src="images/hardy.png" alt="">
+        </div>
     </header>
 </body>
 </html>
