--- a/index.html
+++ b/index.html
@@ -40,5 +40,40 @@
             <img class="banner-image" src="images/hardy.png" alt="">
         </div>
     </header>
+    <main>
+        <section class="about">
+            <!-- h3.section-title+p.section-desc -->
+            <h3 class="section-title">About Me</h3>
+            <p class="section-desc">I am a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our motto.</p>
+            <div class="about-info-container">
+                <!-- .about-info*4>h4.info-title+p.info-desc -->
+                <div class="about-info">
+                    <h4 class="info-title">Name:</h4>
+                    <p class="info-desc">Mary Hardy</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email:</h4>
+                    <p class="info-desc">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date</h4>
+                    <p class="info-desc">11 November 1987</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">From:
+                        </h4>
+                    <p class="info-desc">Los Angeles, USA</p>
+                </div>
+            </div>
+        </section>
+        <section class="what-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <p class="section-desc">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+        </section>
+        <section class="resume-summary">
+            <h3 class="section-title">A Summary of my resume</h3>
+            <p class="section-desc"></p>
+        </section>
+    </main>
 </body>
 </html>
