--- a/index.html
+++ b/index.html
@@ -69,10 +69,82 @@
         <section class="what-i-do">
             <h3 class="section-title">What I Do</h3>
             <p class="section-desc">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <!-- .skill-info-container>div.skill-info*4>img+h4.skill-info-title+p.skill-desc -->
+            <div class="skill-info-container">
+                <div class="skill-info">
+                    <img src="images/icons/js.png" alt="">
+                    <h4 class="skill-info-title">Vanilla JavaScript</h4>
+                    <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill-info">
+                    <img src="images/icons/react.png" alt="">
+                    <h4 class="skill-info-title">React</h4>
+                    <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill-info">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4 class="skill-info-title">Node.js</h4>
+                    <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill-info">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4 class="skill-info-title">MongoDB</h4>
+                    <p class="skill-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
         </section>
+        <!-- section.resume-summary>h3.section-title -->
         <section class="resume-summary">
             <h3 class="section-title">A Summary of my resume</h3>
-            <p class="section-desc"></p>
+            <div class="resume-container">
+                <!-- .resume-column*2>h3.resume-col-title -->
+                <div class="resume-column">
+                    <h3 class="resume-col-title">my education</h3>
+                    <!-- .resume-item>h3.resume-item-title+h4.resume-institute-info+p.resume-item-desc -->
+                    <div class="resume-item">
+                        <h3 class="resume-item-title">Master in Computer Engineering</h3>
+                        <h4 class="resume-institute-info">Harvard University / 2015 - 2017</h4>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h3 class="resume-item-title">Master in Computer Engineering</h3>
+                        <h4 class="resume-institute-info">Harvard University / 2015 - 2017</h4>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h3 class="resume-item-title">Master in Computer Engineering</h3>
+                        <h4 class="resume-institute-info">Harvard University / 2015 - 2017</h4>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-col-title">my experience</h3>
+                    <div class="resume-item">
+                        <h3 class="resume-item-title">Master in Computer Engineering</h3>
+                        <h4 class="resume-institute-info">Harvard University / 2015 - 2017</h4>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h3 class="resume-item-title">Master in Computer Engineering</h3>
+                        <h4 class="resume-institute-info">Harvard University / 2015 - 2017</h4>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h3 class="resume-item-title">Master in Computer Engineering</h3>
+                        <h4 class="resume-institute-info">Harvard University / 2015 - 2017</h4>
+                        <p class="resume-item-desc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="resume-summary-button">
+                <button class="button-primary">Download CV</button>
+            </div>
+            
         </section>
     </main>
 </body>
