--- a/index.html
+++ b/index.html
@@ -147,5 +147,35 @@
             
         </section>
     </main>
+    <footer>
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p class="footer-description">Please fill out the form on this section to contact with me or call between
+            9:00 A.M and 8.00 P.M ET, Monday through Friday</p>
+            <!-- .social-media-links>a*3>img -->
+            <div class="social-media-links">
+                <a href="#" target="_blank"><img src="images/icons/facebook.png" alt=""></a>
+                <a href="#" target="_blank"><img src="images/icons/twitter.png" alt=""></a>
+                <a href="#" target="_blank"><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+
+        <div class="footer-column">
+            <h3 class="section-title" id="contact">Contact Me</h3>
+            <form action="" class="contact-form">
+                <label for="name">
+                    <input type="text" id="name" placeholder="Name">
+                </label>
+                <label for="email">
+                    <input type="text" id="email" placeholder="Email">
+                </label>
+                <label for="message">
+                    <textarea name="" id="message" rows="3" cols="8" placeholder="Message">          
+                    </textarea>
+                </label>
+                <input class="footer-button" type="button" value="Submit">
+            </form>
+        </div>
+    </footer>
 </body>
 </html>
