--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
     <!-- css linking -->
     <link rel="stylesheet" href="style/porfolio.css">
+    <!-- setting up font-awesome for icons -->
+    <script src="https://kit.fontawesome.com/06d933816e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- emmet code for header: header>nav>h3>span^ul>li*3>a^button (button part needs to check yet) -->
@@ -34,8 +36,8 @@
                 <h3 class="banner-greet">Hi,I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p banner-description>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="button-primary">Download CV</button>
-                <button class="button-primary">Contact</button>
+                <button class="button-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="button-primary"><i class="fa-solid fa-phone-volume"></i> Contact</button>
             </div>
             <img class="banner-image" src="images/hardy.png" alt="">
         </div>
@@ -142,7 +144,7 @@
                 
             </div>
             <div class="resume-summary-button">
-                <button class="button-primary">Download CV</button>
+                <button class="button-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
             </div>
             
         </section>
