what i do section responsive for small devices

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!-- emmet code for header: header>nav>h3>span^ul>li*3>a^button (button part needs to check yet) -->
-    <header class="header">
+    <header class="header hide">
         <nav>
             <h3 class="nav-title">Ma<span class="text-yellow">r</span>y</h3>
             <ul>
@@ -42,8 +42,8 @@
             <img class="banner-image" src="images/hardy.png" alt="">
         </div>
     </header>
-    <main class="hide">
-        <section class="about">
+    <main >
+        <section class="about hide">
             <!-- h3.section-title+p.section-desc -->
             <h3 class="section-title">About Me</h3>
             <p class="section-desc">I am a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our motto.</p>
@@ -96,7 +96,7 @@
             </div>
         </section>
         <!-- section.resume-summary>h3.section-title -->
-        <section class="resume-summary">
+        <section class="resume-summary hide">
             <h3 class="section-title">A Summary of my resume</h3>
             <div class="resume-container">
                 <!-- .resume-column*2>h3.resume-col-title -->
