resume responsive for small devices

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </section>
-        <section class="what-i-do">
+        <section class="what-i-do hide">
             <h3 class="section-title">What I Do</h3>
             <p class="section-desc">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
             <!-- .skill-info-container>div.skill-info*4>img+h4.skill-info-title+p.skill-desc -->
@@ -96,7 +96,7 @@
             </div>
         </section>
         <!-- section.resume-summary>h3.section-title -->
-        <section class="resume-summary hide">
+        <section class="resume-summary ">
             <h3 class="section-title">A Summary of my resume</h3>
             <div class="resume-container">
                 <!-- .resume-column*2>h3.resume-col-title -->
