--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </header>
     <main >
-        <section class="about hide">
+        <section class="about ">
             <!-- h3.section-title+p.section-desc -->
             <h3 class="section-title">About Me</h3>
             <p class="section-desc">I am a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our motto.</p>
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </section>
-        <section class="what-i-do hide">
+        <section class="what-i-do ">
             <h3 class="section-title">What I Do</h3>
             <p class="section-desc">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
             <!-- .skill-info-container>div.skill-info*4>img+h4.skill-info-title+p.skill-desc -->
@@ -96,7 +96,7 @@
             </div>
         </section>
         <!-- section.resume-summary>h3.section-title -->
-        <section class="resume-summary ">
+        <section class="resume-summary">
             <h3 class="section-title">A Summary of my resume</h3>
             <div class="resume-container">
                 <!-- .resume-column*2>h3.resume-col-title -->
