--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img class="banner-image" src="images/hardy.png" alt="">
         </div>
     </header>
-    <main >
+    <main class="hide">
         <section class="about ">
             <!-- h3.section-title+p.section-desc -->
             <h3 class="section-title">About Me</h3>
@@ -149,7 +149,7 @@
             
         </section>
     </main>
-    <footer class="hide">
+    <footer >
         <div class="footer-column">
             <h3 class="section-title">Lets Connect</h3>
             <p class="footer-description">Please fill out the form on this section to contact with me or call between
