header responsive for smaller device

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!-- emmet code for header: header>nav>h3>span^ul>li*3>a^button (button part needs to check yet) -->
-    <header class="header hide">
+    <header class="header ">
         <nav>
             <h3 class="nav-title">Ma<span class="text-yellow">r</span>y</h3>
             <ul>
@@ -35,14 +35,16 @@
             <div class="banner-content">
                 <h3 class="banner-greet">Hi,I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p banner-description>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="button-primary"><i class="fa-solid fa-download"></i> Download CV</button>
-                <button class="button-primary"><i class="fa-solid fa-phone-volume"></i> Contact</button>
+                <p class="banner-desc">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <div class="banner-button">
+                    <button class="button-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                    <button class="button-primary"><i class="fa-solid fa-phone-volume"></i> Contact</button>
+                </div>
             </div>
             <img class="banner-image" src="images/hardy.png" alt="">
         </div>
     </header>
-    <main class="hide">
+    <main >
         <section class="about ">
             <!-- h3.section-title+p.section-desc -->
             <h3 class="section-title">About Me</h3>
