nav,banner button responsive medium

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!-- emmet code for header: header>nav>h3>span^ul>li*3>a^button (button part needs to check yet) -->
-    <header class="header hide">
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="text-yellow">r</span>y</h3>
             <ul>
